<resources>
    <string name="app_name">Java Studio</string>

    <string name="splash_tip">一个 Android end of the  Java IDE</string>
    <string name="splash_interest">Interest is the best teacher</string>
    <string name="splash_loading">Loaded</string>
    <string name="splash_copyright">Copyright 2018–2019 by Ariful Islam .All rights reserved.</string>
    <string name="splash_skip_time">Skip</string>

    <!--  提示信息相关  -->
    <string name="tips_no_content">There is no content at this time</string>
    <string name="tips_open">Open it</string>
    <string name="tips_open_app">The page wants to open an external app</string>
    <string name="tips_no_internet">There is no network connection</string>
    <string name="tips_twice_again">Return the operation again to exit the system</string>
    <string name="tips_no_data">There is no data at this time</string>

    <string name="dialog_loading">Loaded, please wait a moment</string>
    <string name="dialog_done">Are you sure</string>
    <string name="dialog_clear">Cancel</string>

    <string name="project_notice">Software bulletin: Java compiler</string>
    <string name="project_menu_refresh">Refresh</string>
    <string name="project_menu_new">New</string>
    <string name="project_menu_import">Import</string>
    <string name="project_menu_clean">Clean the item</string>
    <string name="project_un_select">No items were selected</string>
    <string name="project_no_data">Please create a new project</string>
    <string name="project_clean_success">：Clean-up was successful</string>
    <string name="project_name">Java project name</string>
    <string name="project_cant_null">The project name cannot be empty</string>
    <string name="project_is_delete">Do you want to eliminate the item: %s?</string>
    <string name="project_is_delete_item">Do you want to erase the entry?</string>
    <string name="project_no_open">The project is not open</string>
    <string name="project_code_file_size">The number of source files：</string>
    <string name="project_now">Engineering：</string>
    <string name="project_cant_open">The file could not be opened</string>
    <string name="project_parent_name">The parent directory</string>
    <string name="project_package_name">The name of the package</string>
    <string name="project_input_package">Please enter the package name</string>
    <string name="project_create_project">Create a new Java Project</string>
    <string name="project_create_class">Create a new Java Class</string>


    <string name="open_error">The opening failed</string>
    <string name="save_success">The save was successful</string>
    <string name="save_error">The save failed</string>
    <string name="splash_text">Hello World!\nI am Java!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="main_editor">The jammer</string>
    <string name="main_tool">Toolbox</string>
    <string name="main_project">The project tree</string>
    <string name="main_document">The document library</string>
    <string name="double_exit">Press the return key again to exit</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="open_web">Open in the browser</string>
    <string name="copy_link">Copy this link</string>
    <string name="collection">Collection</string>
    <string name="cant_refresh">Unable to refresh</string>
    <string name="cant_copy">This link could not be copied</string>
    <string name="copy_right">The replication was successful</string>
    <string name="cant_open">Unable to open</string>
    <string name="open_app">Open App</string>
    <string name="no_open_app">The app is not installed</string>
    <string name="web_details">Page details</string>
    <string name="no_internet">There is no network connection</string>
    <string name="double_close_web">Press again to return to close the page</string>
    <string name="apply_me_key">fkx01097fafqwfnmxjtzu1c</string>
    <string name="saving">Saved</string>
    <string name="tip">Tips</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="down_tip">Download the prompt</string>
    <string name="download_ing">The file is downloaded</string>
    <string name="down_trip">Download the prompt</string>
    <string name="download_now">Download it now</string>
    <string name="file_name">Filename</string>
    <string name="size">Size</string>
    <string name="download_dir">Download location</string>
    <string name="open_file">Open the file</string>
    <string name="download_error">The download failed</string>
    <string name="ad_layout">Thank you for your support</string>
    <string name="title_activity_settings">Set up the center</string>
    <string name="setting_editor">The timer is set</string>
    <string name="setting_compile">Compiler settings</string>
    <string name="setting_default">Recovery (1)</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="donate">It is  a good time to editor</string>
    <string name="no_apply_app">You donot seem to have Alipay installed</string>
    <string name="setting_about">About</string>
    <string name="setting_restore">Recovery (1)</string>
    <string name="jar_search">Maven Rely on search</string>
    <string name="jar_search_tip">Depending on the keyword query network, the dependent library Jar file can be easily imported into your project and used by querying the Maven address</string>
    <string name="brvah_loading">Loading....</string>
    <string name="brvah_load_failed">The load failed, please how I try again</string>
    <string name="brvah_load_end">No more data is available</string>
    <string name="empty_tip">No data at this time (̄ "Naughty")</string>
    <string name="copy_jar">Copy dependent addresses</string>
    <string name="project_package_class">The class name</string>
    <string name="project_package_kind">Type</string>
    <string name="editor_log">On the output log</string>
</resources>
